[project]
name = "scutes"
description = "Item Processing Application for WHCA Pool Reports Collection"
version = "1.0.0"
requires-python = ">=3.11"
license = {text = "Apache-2.0 license"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = {file = ["requirements.txt"]}
[project.optional-dependencies]
dev = {file = ["requirements.dev.txt"] }
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'scutes.settings'
python_files = ['tests.py', 'test_*.py']
pythonpath = ['src', '.']
markers = [
    "webdriver: marks tests that require webdriver(deselect with '-m \"not webdriver\"')",
]
[project.scripts]
"manage.py" = "scutes:django_manage"
[tool.ruff]
line-length = 120
[tool.ruff.format]
quote-style = "single"  # Use single quotes for strings